--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Requirements:
 
 Step 
 1. git clone this project
-2. download radikojp for android (6.3.7) into project folder
+2. download radikojp for android into project folder
 3. java -jar apktools.jar d <Apk File>  -o build
 4. apply patch
 5. java -jar apktools.jar b build
